<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gecko Browser</string>
    <string name="hint_search">Search or enter URL</string>
    <string name="btn_back">Back</string>
    <string name="btn_forward">Forward</string>
    <string name="btn_home">Home</string>
    <string name="btn_tabs">Tabs</string>
    <string name="btn_more">More</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_cancel">Cancel</string>
    <string name="more_menu_title">Menu</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_desktop_mode">Desktop Mode</string>
    <string name="menu_share">Share</string>
    <string name="settings_title">Settings</string>
    <string name="parental_controls">Parental Controls</string>
    <string name="tabs_title">Tabs</string>
    <string name="new_tab_label">New Tab</string>
</resources>
